@@ -5,30 +5,29 @@
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="PlayRoom.git">
     <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="C:/Users/narco/eclipse/java-2019-09/eclipse/"/>
+    <property name="ECLIPSE_HOME" value="../../../../eclipse/java-2020-12/eclipse/"/>
     <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="12"/>
-    <property name="source" value="12"/>
-    <path id="JavaFX15.userclasspath">
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/javafx.base.jar"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/javafx.controls.jar"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/javafx.fxml.jar"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/javafx.graphics.jar"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/javafx.media.jar"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/javafx.swing.jar"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/javafx.web.jar"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/javafx-swt.jar"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/src.zip"/>
+    <property name="target" value="15"/>
+    <property name="source" value="15"/>
+    <path id="JAVAFX-15.0.1.userclasspath">
+        <pathelement location="../../../../Downloads/javafx-sdk-15.0.1/lib/javafx.base.jar"/>
+        <pathelement location="../../../../Downloads/javafx-sdk-15.0.1/lib/javafx.controls.jar"/>
+        <pathelement location="../../../../Downloads/javafx-sdk-15.0.1/lib/javafx.fxml.jar"/>
+        <pathelement location="../../../../Downloads/javafx-sdk-15.0.1/lib/javafx.graphics.jar"/>
+        <pathelement location="../../../../Downloads/javafx-sdk-15.0.1/lib/javafx.media.jar"/>
+        <pathelement location="../../../../Downloads/javafx-sdk-15.0.1/lib/javafx.swing.jar"/>
+        <pathelement location="../../../../Downloads/javafx-sdk-15.0.1/lib/javafx.web.jar"/>
+        <pathelement location="../../../../Downloads/javafx-sdk-15.0.1/lib/javafx-swt.jar"/>
     </path>
     <path id="PlayRoom.git.classpath">
         <pathelement location="bin"/>
-        <path refid="JavaFX15.userclasspath"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/src.zip"/>
+        <path refid="JAVAFX-15.0.1.userclasspath"/>
+        <pathelement location="../../../../Downloads/javafxscxenebuilder/controlsfx-11.0.3.jar"/>
     </path>
-    <path id="run.HelloWorld (3).classpath">
+    <path id="run.New_configuration.classpath">
         <path refid="PlayRoom.git.classpath"/>
-        <path refid="JavaFX15.userclasspath"/>
-        <pathelement location="../../../../openjfx-15.0.1_windows-x86_bin-sdk/javafx-sdk-15.0.1/lib/src.zip"/>
+        <path refid="JAVAFX-15.0.1.userclasspath"/>
+        <pathelement location="../../../../Downloads/javafxscxenebuilder/controlsfx-11.0.3.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -65,9 +64,10 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-    <target name="HelloWorld (3)">
-        <java classname="HelloWorld" failonerror="true" fork="yes">
-            <classpath refid="run.HelloWorld (3).classpath"/>
+    <target name="New_configuration">
+        <java classname="logic.view.HomePageView" failonerror="true" fork="yes">
+            <jvmarg line="--module-path &quot;/home/marco/Downloads/javafx-sdk-15.0.1/lib/&quot;&#10; --add-modules=javafx.controls&#10;--add-modules=javafx.fxml"/>
+            <classpath refid="run.New_configuration.classpath"/>
         </java>
     </target>
 </project>
